# stream-files

./: .gitignore  Cargo.toml  readme.md
http_client/: Cargo.toml
http_client/src/: main.rs
upload_server/: Cargo.toml
upload_server/src/: main.rs
