[package]
name = "http_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.1"
futures-util = "0.3.30"
reqwest = { version = "0.12.3", features = ["multipart", "stream"] }
tokio = { version = "1.38.2", features = ["macros", "rt-multi-thread"] }
